# NeoUI

./: .gitignore  README.md  package-lock.json
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  client.ts  index.css
javaserver/: build.gradle  settings.gradle
javaserver/src/main/java/com/neoui/: Main.java  SampleServiceImpl.java
proto/api/v1/: data.proto
server/: Cargo.toml  build.rs
server/src/: main.rs
