[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
connectrpc = { version = "0.2", features = ["axum"] }
buffa = "0.2"
futures = "0.3"
http = "1.4"
http-body = "1.0"
http-body-util = "0.1"
tower = "0.4"
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
[build-dependencies]
connectrpc-build = "0.2"
